[package]
name = "lcd1_28"
version = "0.1.0"
edition = "2021"

[dependencies]
waveshare-rp2040-lcd-0-96 = { version = "0.8.0", features = [
	"boot2",
	"cortex-m-rt",
	"critical-section-impl",
	"rom-func-cache",
	"rp2040-boot2",
	"rt",
	"rp2040-e5"
] }

cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = "1.0"

# defmt = "0.3"
# defmt-rtt = "0.4"
# panic-probe = { version = "0.3", features = ["print-defmt"] }

#embassy-futures = { version = "0.1.0" }
## embassy-embedded-hal = { version = "0.1.0", features = ["defmt"] }
#embassy-sync = { version = "0.5.0", features = ["defmt"] }
#embassy-executor = { version = "0.5.0", features = [
#    "task-arena-size-32768",
#    "arch-cortex-m",
#    "executor-thread",
#    "executor-interrupt",
#    "defmt",
#    "integrated-timers",
#] }
#embassy-time = { version = "0.3.0", features = [
#    "defmt",
#    "defmt-timestamp-uptime",
#] }
#embassy-rp = { version = "0.1.0", features = [
#    "defmt",
#    "unstable-pac",
#    "time-driver",
#    "critical-section-impl",
#] }

[dependencies.embedded-graphics]
version = "0.7.1"
[dependencies.fugit]
version = "0.3.7"
[dependencies.panic-halt]
version = "0.2.0"
[dependencies.st7735-lcd]
version = "0.8.1"
